[ADD]
Se estan realizando correciones en el codigo del backend , Las cuales consisten en realizar correcciones pequeñas en el codigo y corrigiendo advertencias y advertencias de alto riesgo